# RobianAPI

./: .env  .env.example  .gitignore  ANALYSIS_SUMMARY.md  CHANGELOG.md  Dockerfile  PROMPT_ROBIAN_API.md  README.md  alembic.ini  docker-compose.yml  exploration_results_20250609_191205.json  pyproject.toml  requirements-dev.txt  requirements.txt  start.py  start_api.py  test_api.py  test_api_quick.py
alembic/: env.py
alembic/versions/: 3c0829508a0b_initial_schema.py
api/: config.py  main.py  middleware.py
api/models/: __init__.py  collections.py  database.py  debates.py
api/routers/: __init__.py  collections.py  debates.py  health.py  streaming.py
api/schemas/: __init__.py  debates.py
api/services/: __init__.py  cache_service.py  websocket_service.py
archive/: README.md  enhanced_extractor.py  exploration_results_20250609_191252.json  final_extractor.py
docs/: DEVELOPMENT_NOTES.md  ISSUES_FIXED.md  README.md
monitoring/: prometheus.yml
scripts/: backup_audio.py  cleanup_for_fdroid.sh  demo.py  deploy_local.sh  explore_site.py  extract_audio.py  health_check.py  install_all.sh  monitor_system.py  postgres-init.sql  setup_database.py  status.py  test_api.py  test_basic.py  test_ytdlp.py  verify_fdroid_structure.sh  welcome.sh
scripts/setup/: README.md  git-init.sh  init-git.sh  migrate-from-archive.sh
tests/: conftest.py  test_api_health.py  test_config.py  test_main.py  test_models.py  test_robian_api.py
