[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robian-api"
version = "1.0.0"
description = "API Backend pour l'application RobianAPP - Débats Assemblée Nationale"
authors = [{name = "RobianAPI Team", email = "team@robian-api.com"}]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.11"
keywords = ["politics", "parliament", "democracy", "fastapi", "audio", "streaming"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Sociology :: History",
]

dependencies = [
    # Core FastAPI
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    
    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.28.0",          # PostgreSQL async
    "alembic>=1.12.0",          # DB migrations
    
    # Cache
    "redis[hiredis]>=5.0.0",    # Cache Redis
    
    # Audio processing
    "yt-dlp>=2023.10.13",       # Extraction vidéo
    "ffmpeg-python>=0.2.0",     # Processing audio
    
    # HTTP & Async
    "httpx>=0.25.0",            # Client HTTP async
    "aiofiles>=23.2.1",         # File I/O async
    
    # Background tasks
    "celery[redis]>=5.3.0",     # Tasks async
    
    # Monitoring
    "prometheus-client>=0.17.0", # Métriques
    "structlog>=23.1.0",        # Logging structuré
    
    # Security & Middleware
    "python-multipart>=0.0.6",  # Upload fichiers
    "python-jose[cryptography]>=3.3.0", # JWT
    "passlib[bcrypt]>=1.7.4",   # Hash mots de passe
    "slowapi>=0.1.9",           # Rate limiting
    
    # WebSockets
    "websockets>=11.0.0",       # WebSockets
    
    # Utils
    "python-dotenv>=1.0.0",     # Environment variables
    "click>=8.1.0",             # CLI commands
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "httpx>=0.25.0",            # For testing
    "black>=23.9.0",            # Code formatting
    "isort>=5.12.0",            # Import sorting
    "flake8>=6.1.0",            # Linting
    "mypy>=1.6.0",              # Type checking
    "pre-commit>=3.4.0",        # Git hooks
    "bandit>=1.7.5",            # Security linting
]

test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocs-swagger-ui-tag>=0.6.0",
]

prod = [
    "gunicorn>=21.2.0",         # Production WSGI server
]

all = ["robian-api[dev,test,docs,prod]"]

[project.urls]
Homepage = "https://github.com/robian-api/robian-api"
Documentation = "https://docs.robian-api.com"
Repository = "https://github.com/robian-api/robian-api.git"
Issues = "https://github.com/robian-api/robian-api/issues"

[project.scripts]
robian-api = "api.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["api*"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["api"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "yt_dlp.*",
    "ffmpeg.*",
    "celery.*",
    "redis.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=api",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
    "network: Tests requiring network access",
]

[tool.coverage.run]
source = ["api"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
